# LucidShell

./: README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
docs/: architecture-design.md  beta-test-checklist.md  known-issues.md  release-notes-0.1.0.md  ui-design.md
scripts/: generate-build-info.mjs  sync-version.mjs
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons-lucidshell/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/app/: commands.rs  events.rs  state.rs
src-tauri/src/domain/: mod.rs  monitor.rs  server.rs  sftp.rs  terminal.rs  transfer.rs
src-tauri/src/dto/: commands.rs  events.rs
src-tauri/src/infrastructure/: crypto.rs  known_hosts.rs  logging.rs  mod.rs  storage.rs
src-tauri/src/services/: local_edit_service.rs  mod.rs  monitor_service.rs  session_manager.rs  sftp_service.rs  terminal_service.rs  transfer_service.rs
src-tauri/src/transport/: mod.rs  sftp_client.rs  ssh_client.rs  ssh_pool.rs  terminal_channel.rs
src/app/styles/: global.css
src/features/about-app/: index.ts
src/features/app-confirm/: index.ts
src/features/app-settings/: index.ts
src/features/app-toast/: index.ts
src/features/create-connection-group/: index.ts
src/features/create-terminal-tab/: index.ts
src/features/diagnostics-panel/: index.ts
src/features/manage-connection-form/: index.ts
src/features/manage-connection-menu/: index.ts
src/features/sftp-entry-menu/: index.ts
src/features/sftp-follow-cwd-confirm/: index.ts
(+46 files in other folders)
