[package]
name = "lucidshell"
version = "0.1.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lucidshell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
russh = { version = "0.61.2", default-features = false, features = ["flate2", "ring", "rsa"] }
russh-sftp = "2.3.0"
tokio = { version = "1", features = ["fs", "macros", "rt", "sync", "time"] }
tokio-util = "0.7"
notify = "8.2.0"
tauri-plugin-clipboard-manager = "2"
chrono = "0.4"
keyring = "4.0.1"
keyring-core = "1.0.0"
